<resources>
    <string name="app_name">Coinz</string>
    <string name="title_activity_main">Map</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_bank">Bank</string>
    <string name="title_activity_wallet">Wallet</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="prompt_username">Username</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_password_required">Password</string>
    <string name="action_create_account">Create account</string>
    <string name="login_failed">The email or password is incorrect</string>
    <string name="action_sign_out">Sign out</string>

    <string name="deposit_coins">Deposit</string>

    <string name="action_exchange_rate">Exchange Rates</string>
    <string name="username_taken">Username is already taken</string>
    <string name="clear_messages">Clear</string>

</resources>
